--- a/assets/less/single.less
+++ b/assets/less/single.less
@@ -19,7 +19,7 @@
 }
 
 .lgx-banner-inner {
-  background: url('http://placehold.it/1920x500') center center no-repeat;
+  background: url('') center center no-repeat;
   -webkit-background-size: cover;
   -o-background-size: cover;
   -moz-background-size: cover;
